// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButtonContainer Styles should render the container with 12% from bottom 1`] = `
<div
  className="indexstyles__ActionButtonContainer-dRLQIn eIbGPs"
/>
`;

exports[`ActionButtonContainer Styles should render the container with 24% from bottom 1`] = `
<div
  className="indexstyles__ActionButtonContainer-dRLQIn eYWVNa"
/>
`;

exports[`ActionButtonContainer Styles should render the main container without full container mixin applied 1`] = `
<div
  className="indexstyles__Main-hzgdLG fhmZZe"
/>
`;
